# gxi

./: .bumpversion.cfg  README.md  setup.cfg  setup.py  tox.ini
gxi/: __init__.py
gxi/test/: gxi.test  test_version.py
requirements/: development.txt  devops.txt  linting.txt  requirements.txt  testing.txt
