[metadata]
name = gxi
version = 0.0.0
url = "http://github.com/jalanb/gxi"
description-file = README.md
download_url =  "https://github.com/jalanb/gxi/tarball/master"
license = "(c) J Alan Brogan, 2022"
author = "J Alan Brogan"
author_email = github@al-got-rhythm.net
description = "Dirty git menu for the shell"
platforms = unix, linux

classifiers =
    Programming Language :: Python :: 3.8
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Systems Administration

# https://black.readthedocs.io/en/stable/compatible_configs.html#flake8
[flake8]
exclude = .git,.tox,.venv,__pycache__,*.egg-info,build,dist,old
max-line-length = 88
# E203, W503: suggested by black
# E731: lambda bad
extend-ignore = E203, W503, E731
max-returns = 8
max-arguments = 8

[coverage:report]
omit =
     */test/*
